k8s/04-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: finance-tracker
spec:
  selector:
    app: frontend
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: finance-tracker
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: registry.digitalocean.com/finance-tracker-registry/finance-tracker-frontend:latest
